stylesheet: fix two-columns breakpoint
The two-columns breakpoints was too large, and trigerred way before it
was actually needed.

--- a/app/assets/stylesheets/new_design/_constants.scss
+++ b/app/assets/stylesheets/new_design/_constants.scss
@@ -6,7 +6,7 @@ $default-padding: 2 * $default-spacer;
 
 // layouts
 $two-columns-padding: 60px;
-$two-columns-breakpoint: $page-width + (2 * $two-columns-padding);
+$two-columns-breakpoint: $page-width + (2 * $default-padding);
 
 // z-order
 $alert-z-index: 100;
